src/objects/RingLeadTrigger__RingLead_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>RingLeadTrigger__After_Create_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Create Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__After_Create_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Create Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__After_Create_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Create Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__After_Create_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Create Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__After_Create__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__After_Update_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Update Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__After_Update_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Update Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__After_Update_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Update Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__After_Update_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Update Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__After_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Data_Expiry_Days__c</fullName>
        <defaultValue>90</defaultValue>
        <label>Data Expiry Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Enable_RingLead_Routing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable RingLead Routing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Object_Options__c</fullName>
        <label>Object Options</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Cases</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__RingLead_DMS_Task__c</fullName>
        <label>RingLead DMS Task</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__RingLead_Days_Param__c</fullName>
        <label>RingLead Days Param</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__RingLead_Schedule_Option__c</fullName>
        <label>RingLead Schedule Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Trigger_After_X_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger After X Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Trigger_Every_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Every Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Trigger_Once__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Trigger Once</label>
        <type>Checkbox</type>
    </fields>
    <label>RingLead Configuration</label>
    <listViews>
        <fullName>RingLeadTrigger__All</fullName>
        <columns>NAME</columns>
        <columns>RingLeadTrigger__Object_Options__c</columns>
        <columns>RingLeadTrigger__RingLead_DMS_Task__c</columns>
        <columns>RingLeadTrigger__Enable_RingLead_Routing__c</columns>
        <columns>RingLeadTrigger__After_Create__c</columns>
        <columns>RingLeadTrigger__After_Create_Contact__c</columns>
        <columns>RingLeadTrigger__After_Update__c</columns>
        <columns>RingLeadTrigger__After_Update_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RingLead Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RingLead Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>